--- a/login.html
+++ b/login.html
@@ -9,26 +9,35 @@
 </head>
 
 <body>
-   <!-- НАЧАЛО ХЕДЕРА -->
-   <header>
+  <!-- НАЧАЛО ХЕДЕРА -->
+  <header>
     <div class="header content">
         <div class="logo__header">
             <img src="assets/image/logo.png" alt="">
         </div>
         <div class="header__link">
+            <a href="index.html">Главная</a>
+            <a href="index.html">Каталог</a>
+            <a href="index.html">Акции</a>
+            <a href="index.html">Контакты</a>
+        </div>
+        <div class="header__icon">
+           <a href="regist.html"> <img src="assets/image/user_.png" alt=""></a>
+           <a href="admin.html"> <img src="assets/image/logout_.png" alt=""></a>
+        </div>
+        <input type="checkbox" name="" id="burger"> 
+        <label for="burger"></label> 
+        <nav class="burg"> 
             <a href="">Главная</a>
             <a href="about.html">Каталог</a>
             <a href="katalog.html">Акции</a>
             <a href="">Контакты</a>
-        </div>
-        <div class="header__icon">
-           <a href="regist.html"> <img src="assets/image/user_.png" alt=""></a>
-           <a href="login.html"> <img src="assets/image/logout_.png" alt=""></a>
-        </div>
+            <a href="login.html"><img src="assets/image/user_apad.png" alt=""></a> 
+            <a href="admin.html"><img src="assets/image/vxos_adap.png" alt=""></a> 
+        </nav> 
     </div>
 </header>
 <!-- КОНЕЦ ХЕДЕРА -->
-
     <!-- login start -->
     <div class="login">
         <div class="login-block container">
